force-app/main/default/objects/Marriage_Form_Registration__c/Marriage_Form_Registration__c.object-meta.xml
<CustomObject>
    <label>Marriage Formation Registration</label>
    <nameField>
        <label>Marriage Formation Registration</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marriage Formation Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>