force-app/main/default/objects/Marriage_Form_Registration__c/fields/Additional_location_to_send_Marriage_Pre__c.field-meta.xml
<CustomField>
    <fullName>Additional_location_to_send_Marriage_Pre__c</fullName>
    <label>Additional location to send Certificate</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>