force-app/main/default/objects/Marriage_Form_Registration__c/fields/Admin_Code__c.field-meta.xml
<CustomField>
    <fullName>Admin_Code__c</fullName>
    <label>Admin Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>