force-app/main/default/objects/Marriage_Form_Registration__c/fields/Are_both_of_you_civilly_married__c.field-meta.xml
<CustomField>
    <fullName>Are_both_of_you_civilly_married__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are both of you civilly married?</label>
    <type>Checkbox</type>
</CustomField>