force-app/main/default/objects/Marriage_Form_Registration__c/fields/Are_you_participating_in_Witness_to_Love__c.field-meta.xml
<CustomField>
    <fullName>Are_you_participating_in_Witness_to_Love__c</fullName>
    <label>Are you participating in Witness to Love</label>
    <length>255</length>
    <type>Text</type>
</CustomField>