force-app/main/default/objects/Marriage_Form_Registration__c/fields/Bride_Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Bride_Program_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bride&apos;s Program Engagement</label>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Marriage Formation Registrations (Bride&apos;s Program Engagement)</relationshipLabel>
    <relationshipName>Marriage_Formation_Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>