force-app/main/default/objects/Marriage_Form_Registration__c/fields/Catholic_or_non_Catholic_1__c.field-meta.xml
<CustomField>
    <fullName>Catholic_or_non_Catholic_1__c</fullName>
    <label>Catholic or non-Catholic (Him)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>