force-app/main/default/objects/Marriage_Form_Registration__c/fields/Catholic_or_non_Catholic__c.field-meta.xml
<CustomField>
    <fullName>Catholic_or_non_Catholic__c</fullName>
    <label>Catholic or non-Catholic (Her)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>