force-app/main/default/objects/Marriage_Form_Registration__c/fields/Certificate_to_go_to_Name_of_the_Priest__c.field-meta.xml
<CustomField>
    <fullName>Certificate_to_go_to_Name_of_the_Priest__c</fullName>
    <label>Certificate to go to (Name of the Priest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>