force-app/main/default/objects/Marriage_Form_Registration__c/fields/Course_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Course_Schedule__c</fullName>
    <label>﻿Service Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>