force-app/main/default/objects/Marriage_Form_Registration__c/fields/Date_Civilly_Married__c.field-meta.xml
<CustomField>
    <fullName>Date_Civilly_Married__c</fullName>
    <label>Date Civilly Married</label>
    <type>Date</type>
</CustomField>