force-app/main/default/objects/Marriage_Form_Registration__c/fields/Engaged_Couple_ImportedID__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Couple_ImportedID__c</fullName>
    <label>Engaged Couple ImportedID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>