force-app/main/default/objects/Marriage_Form_Registration__c/fields/Engaged_Couple_Record__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Couple_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engaged Couple (Imported)</label>
    <referenceTo>Engaged_Couple__c</referenceTo>
    <relationshipLabel>MF Registrations</relationshipLabel>
    <relationshipName>Marriage_Formation_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>