force-app/main/default/objects/Marriage_Form_Registration__c/fields/Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Entry_Id__c</fullName>
    <label>Entry Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>