force-app/main/default/objects/Marriage_Form_Registration__c/fields/Fertility_Health_Awareness_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Fertility_Health_Awareness_Webinar__c</fullName>
    <label>Fertility Health Awareness Webinar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>