force-app/main/default/objects/Marriage_Form_Registration__c/fields/Flow_Run_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Flow_Run_Import_Date__c</fullName>
    <label>Flow Run Import Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>