force-app/main/default/objects/Marriage_Form_Registration__c/fields/Groom_Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Groom_Program_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Groom&apos;s Program Engagement</label>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Marriage Formation Registrations</relationshipLabel>
    <relationshipName>Marriage_Formation_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>