force-app/main/default/objects/Marriage_Form_Registration__c/fields/Has_your_pastor_has_spoken_to_you_about__c.field-meta.xml
<CustomField>
    <fullName>Has_your_pastor_has_spoken_to_you_about__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has pastor spoken to you about WTL?</label>
    <type>Checkbox</type>
</CustomField>