force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Address_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Her_Address_Address_Line_2__c</fullName>
    <label>Her Address (Address Line 2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>