force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Her_Address_City__c</fullName>
    <label>Her Address (City)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>