force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Her_Address_Country__c</fullName>
    <label>Her Address (Country)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>