force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Address_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Her_Address_State_Province__c</fullName>
    <label>Her Address (State / Province)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>