force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Address_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Her_Address_Street_Address__c</fullName>
    <label>Her Address (Street Address)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>