force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Address_ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Her_Address_ZIP_Postal_Code__c</fullName>
    <label>Her Address (ZIP / Postal Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>