force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Her_Cell_Phone__c</fullName>
    <label>Her Cell Phone</label>
    <type>Phone</type>
</CustomField>