force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Contact_Imported__c.field-meta.xml
<CustomField>
    <fullName>Her_Contact_Imported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Her Contact (Imported)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marriage Formation Registrations (Her Contact (Imported))</relationshipLabel>
    <relationshipName>Marriage_Formation_Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>