force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Contact_ImportedID__c.field-meta.xml
<CustomField>
    <fullName>Her_Contact_ImportedID__c</fullName>
    <label>Her Contact ImportedID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>