force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Her_Email_Address__c</fullName>
    <label>Her Email Address</label>
    <type>Email</type>
</CustomField>