force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Home_Parish__c.field-meta.xml
<CustomField>
    <fullName>Her_Home_Parish__c</fullName>
    <label>Her Home Parish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>