force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Her_Home_Phone__c</fullName>
    <label>Her Home Phone</label>
    <type>Phone</type>
</CustomField>