force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Name_Last__c.field-meta.xml
<CustomField>
    <fullName>Her_Name_Last__c</fullName>
    <label>Her Name (Last)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>