force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Religious_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Her_Religious_Affiliation__c</fullName>
    <label>Her Religious Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>