force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_Service_Participant_ImportedID__c.field-meta.xml
<CustomField>
    <fullName>Her_Service_Participant_ImportedID__c</fullName>
    <label>Her Service Participant ImportedID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>