force-app/main/default/objects/Marriage_Form_Registration__c/fields/Her_State_Province_Formula__c.field-meta.xml
<CustomField>
    <fullName>Her_State_Province_Formula__c</fullName>
    <formula>CASE(Her_Address_State_Province__c,
&quot;BC&quot;, &quot;British Columbia&quot;, 
&quot;AB&quot;, &quot;Alberta&quot;, 
&quot;MB&quot;, &quot;Manitoba&quot;, 
&quot;SK&quot;, &quot;Saskatchewan&quot;, 
&quot;NS&quot;, &quot;Nova Scotia&quot;, 
&quot;NB&quot;, &quot;New Brunswick&quot;, 
&quot;NL&quot;, &quot;Newfoundland And Labrador&quot;,
&quot;ON&quot;, &quot;Ontario&quot;,
&quot;PE&quot;, &quot;Prince Edward Island&quot;,
&quot;QB&quot;, &quot;Quebec&quot;,
&quot;NT&quot;, &quot;Northwest Territories&quot;, 
&quot;YT&quot;, &quot;Yukon&quot;, 
&quot;NU&quot;, &quot;Nunavut&quot;,
Her_Address_State_Province__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Her State/Province (FORMULA)</label>
    <type>Text</type>
</CustomField>