force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_Address_City__c.field-meta.xml
<CustomField>
    <fullName>His_Address_City__c</fullName>
    <label>His Address (City)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>