force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>His_Cell_Phone__c</fullName>
    <label>His Cell Phone</label>
    <type>Phone</type>
</CustomField>