force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_Contact_Imported__c.field-meta.xml
<CustomField>
    <fullName>His_Contact_Imported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>His Contact (Imported)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marriage Formation Registrations</relationshipLabel>
    <relationshipName>Marriage_Formation_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>