force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_Contact_ImportedID__c.field-meta.xml
<CustomField>
    <fullName>His_Contact_ImportedID__c</fullName>
    <label>His Contact ImportedID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>