force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>His_Email_Address__c</fullName>
    <label>His Email Address</label>
    <type>Email</type>
</CustomField>