force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_Home_Parish__c.field-meta.xml
<CustomField>
    <fullName>His_Home_Parish__c</fullName>
    <label>His Home Parish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>