force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_Name_First__c.field-meta.xml
<CustomField>
    <fullName>His_Name_First__c</fullName>
    <label>His Name (First)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>