force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_Name_Last__c.field-meta.xml
<CustomField>
    <fullName>His_Name_Last__c</fullName>
    <label>His Name (Last)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>