force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_ProgEng_ImportedID__c.field-meta.xml
<CustomField>
    <fullName>His_ProgEng_ImportedID__c</fullName>
    <label>His ProgEng ImportedID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>