force-app/main/default/objects/Marriage_Form_Registration__c/fields/His_Religious_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>His_Religious_Affiliation__c</fullName>
    <label>His Religious Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>