force-app/main/default/objects/Marriage_Form_Registration__c/fields/If_you_have_already_chosen_your_mentor_c__c.field-meta.xml
<CustomField>
    <fullName>If_you_have_already_chosen_your_mentor_c__c</fullName>
    <label>Mentor couple email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>