force-app/main/default/objects/Marriage_Form_Registration__c/fields/Imported_Status__c.field-meta.xml
<CustomField>
    <fullName>Imported_Status__c</fullName>
    <label>Imported Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>