force-app/main/default/objects/Marriage_Form_Registration__c/fields/Intended_wedding_date_if_known__c.field-meta.xml
<CustomField>
    <fullName>Intended_wedding_date_if_known__c</fullName>
    <label>Intended wedding date (if known):</label>
    <type>Date</type>
</CustomField>