force-app/main/default/objects/Marriage_Form_Registration__c/fields/Mentor_couple_name__c.field-meta.xml
<CustomField>
    <fullName>Mentor_couple_name__c</fullName>
    <label>Mentor couple name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>