force-app/main/default/objects/Marriage_Form_Registration__c/fields/No_of_years_married__c.field-meta.xml
<CustomField>
    <fullName>No_of_years_married__c</fullName>
    <label>No. of year(s) married</label>
    <length>255</length>
    <type>Text</type>
</CustomField>