force-app/main/default/objects/Marriage_Form_Registration__c/fields/Other_Please_tell_us_where__c.field-meta.xml
<CustomField>
    <fullName>Other_Please_tell_us_where__c</fullName>
    <description>Deprecated</description>
    <label>Deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>