force-app/main/default/objects/Marriage_Form_Registration__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>