force-app/main/default/objects/Marriage_Form_Registration__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>