force-app/main/default/objects/Marriage_Form_Registration__c/fields/Registration_Total__c.field-meta.xml
<CustomField>
    <fullName>Registration_Total__c</fullName>
    <label>Registration Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>