force-app/main/default/objects/Marriage_Form_Registration__c/fields/Select_Parish_preparing_documentation__c.field-meta.xml
<CustomField>
    <fullName>Select_Parish_preparing_documentation__c</fullName>
    <label>Select Parish preparing documentation:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>