force-app/main/default/objects/Marriage_Form_Registration__c/fields/What_is_your_relationship__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_relationship__c</fullName>
    <label>What is your relationship?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>