force-app/main/default/objects/Marriage_Form_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Course_Schedule__c</columns>
    <columns>Her_Name_First__c</columns>
    <columns>Her_Name_Last__c</columns>
    <columns>Her_Email_Address__c</columns>
    <columns>His_Name_First__c</columns>
    <columns>His_Name_Last__c</columns>
    <columns>His_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>